// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchGroupUsers should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "databricks_workspace:dbc-c50dbe80-ed72.cloud.databricks.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
          },
        },
      ],
      "_type": "databricks_workspace",
      "createdOn": undefined,
      "displayName": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "name": "dbc-c50dbe80-ed72.cloud.databricks.com",
    },
    Object {
      "_class": Array [
        "UserGroup",
      ],
      "_key": "databricks_group:admins",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "admins",
          },
        },
      ],
      "_type": "databricks_group",
      "createdOn": undefined,
      "displayName": "admins",
      "name": "admins",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:stefan.virag@contractor.jupiterone.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "stefan.virag@contractor.jupiterone.com",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "stefan.virag@contractor.jupiterone.com",
      "name": "stefan.virag@contractor.jupiterone.com",
      "username": "stefan.virag@contractor.jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:austin.kelleher@jupiterone.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "austin.kelleher@jupiterone.com",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "austin.kelleher@jupiterone.com",
      "name": "austin.kelleher@jupiterone.com",
      "username": "austin.kelleher@jupiterone.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "databricks_user:sam.andrus@jupiterone.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "username": "sam.andrus@jupiterone.com",
          },
        },
      ],
      "_type": "databricks_user",
      "createdOn": undefined,
      "displayName": "sam.andrus@jupiterone.com",
      "name": "sam.andrus@jupiterone.com",
      "username": "sam.andrus@jupiterone.com",
    },
  ],
  "encounteredTypes": Array [
    "databricks_workspace",
    "databricks_group",
    "databricks_workspace_has_group",
    "databricks_user",
    "databricks_group_has_user",
  ],
  "numCollectedEntities": 5,
}
`;

exports[`#fetchGroups should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "databricks_workspace:dbc-c50dbe80-ed72.cloud.databricks.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
          },
        },
      ],
      "_type": "databricks_workspace",
      "createdOn": undefined,
      "displayName": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "id": "dbc-c50dbe80-ed72.cloud.databricks.com",
      "name": "dbc-c50dbe80-ed72.cloud.databricks.com",
    },
    Object {
      "_class": Array [
        "UserGroup",
      ],
      "_key": "databricks_group:admins",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "admins",
          },
        },
      ],
      "_type": "databricks_group",
      "createdOn": undefined,
      "displayName": "admins",
      "name": "admins",
    },
  ],
  "encounteredTypes": Array [
    "databricks_workspace",
    "databricks_group",
    "databricks_workspace_has_group",
  ],
  "numCollectedEntities": 2,
}
`;
